--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "lit-emitter",
-  "version": "0.0.1",
-  "description": "Simple event emitter",
+  "name": "ts-event-emitter",
+  "version": "1.0.1",
+  "description": "Simple typed Event Emitter",
   "main": "dist/index.js",
-  "types": "dist/types.d.ts",
-  "browserslist": [
-    "since 2017-06"
-  ],
+  "module": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "typesVersions": {
     "<3.8": {
       "*": [
@@ -15,21 +13,26 @@
     }
   },
   "scripts": {
-    "build": "tsc"
+    "test": "jest",
+    "build": "tsc",
+    "watch": "tsc -watch"
   },
   "files": [
+    "/src/",
     "/dist/"
   ],
-  "keywords": [
-    "event-emitter"
-  ],
-  "homepage": "https://github.com/kaifaty/emitter/#readme",
+  "homepage": "https://github.com/kaifaty/emitter#readme",
   "bugs": {
     "url": "https://github.com/kaifaty/emitter/issues"
   },
+  "keywords": [],
   "author": "kaifaty",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^4.5.4"
+    "@types/jest": "^29.2.0",
+    "eslint": "^8.26.0",
+    "jest": "^29.2.2",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.8.4"
   }
 }
