--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,18 @@
     "lib": ["es2016", "DOM"],
     "outDir": "./dist/",
     "noImplicitAny": true,
-    "module": "es6",
-    "target": "es6",
+    "module": "ES2015",
+    "target": "ES2015",
     "declaration": true,    
     "allowJs": false,
     "strict": true,
     "moduleResolution": "Node",
   },
-  "include": ["src"]
+  "include": [
+    "src/*",
+  ],
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts"
+  ]
 }
